Замена ссылок на static.ivacuum.ru на ivacuum.org

--- a/public_html/templates/topic_tpl_header.html
+++ b/public_html/templates/topic_tpl_header.html
@@ -476,7 +476,7 @@ var TPL = {
 		}
 
 		if( flag.length == 2 ) {
-			return (title == true) ? '\n[b]'+ TPL.el_titles[el_id] +'[/b]: [img]http://static.ivacuum.ru/i/flags/24/'+ flag +'.png[/img]' : ' [img]http://static.ivacuum.ru/i/flags/24/'+ flag +'.png[/img]';
+			return (title == true) ? '\n[b]'+ TPL.el_titles[el_id] +'[/b]: [img]http://ivacuum.org/i/flags/24/'+ flag +'.png[/img]' : ' [img]http://ivacuum.org/i/flags/24/'+ flag +'.png[/img]';
 		} else {
 			return (title == true) ? '\n[b]'+ TPL.el_titles[el_id] +'[/b]: '+ el_val : ' '+ TPL.el_titles[el_id] +' '+ el_val;
 		}
